Fixed dark mode

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* Universal */
 html {
     background-image: url("backgroundImage.jpg");
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.8);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -288,14 +287,14 @@ fieldset {
     background-color: rgba(250,250,250,0.1);
     border: 1px solid rgba(250,250,250,1);
     border-radius: 0px;
-    margin-bottom: 20px;
     color: #fff;
     font-size: 14px;
     height: 180px;
-    max-height: 220px;
     line-height: 40px;
-    width: 100%;
+    margin-bottom: 20px;
+    max-height: 220px;
     padding-left: 15px;
+    width: 100%;
 }
 
 button {
@@ -355,19 +354,5 @@ button {
 @media only screen and (max-width: 705px) {
     h2, h3, h4, p, a {
         font-size: 95%;
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    html {
-        background-image: url("backgroundImage.jpg");
-        box-shadow: inset 0 0 0 1000px rgba(0,0,0,.8);
-        background-size: cover;
-        background-position: center center;
-        background-repeat: no-repeat;
-        width: 100%;
-        color: #fff;
-        text-align: center;
-        font-family: 'Lato', sans-serif;
     }
 }
